<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_play"
    app:startDestination="@+id/navigation_play_home">

    <fragment
        android:id="@+id/navigation_play_home"
        android:name="com.quyca.scriptwriter.ui.playeditor.PlayViewerFragment"
        android:label="@string/title_setup_play"
        tools:layout="@layout/fragment_play_viewer" />

    <fragment
        android:id="@+id/navigation_execscript_play"
        android:name="com.quyca.scriptwriter.ui.execplay.ExecPlayFragment"
        android:label="@string/label_exec"
        tools:layout="@layout/exec_play_fragment" />

    <fragment
        android:id="@+id/navigation_viewplay_play"
        android:name="com.quyca.scriptwriter.ui.playeditor.PlayEditorFragment"
        android:label="@string/label_viewer"
        tools:layout="@layout/fragment_play_editor" />

</navigation>