<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.emotioneditor.emotion.EmotionEditorFragment">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

            <Button
                android:id="@+id/create_emotion"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:background="@null"
                android:text="@string/save_emotion" />

        <TextView
            android:id="@+id/emo_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emotion_name_label" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/emotion_aux_label"
            android:ems="10"
            android:inputType="text"
            android:text="" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scriptline_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="17"/>
    </LinearLayout>

</FrameLayout>