<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.macros.MacroRecordFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/audio_label"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/sound_label"
            android:layout_weight="1.3"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/audio_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.3"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:autofillHints="@string/sound_label" />

        <ImageButton
            android:id="@+id/record_button"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:background="@null"
            android:button="@android:color/transparent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:src="@drawable/ic_baseline_mic_24"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/rec_label" />

        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="match_parent"
            android:background="@null"
            android:singleLine="true"
            android:button="@android:color/transparent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:src="@drawable/ic_baseline_play_arrow_24"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/rec_label" />

        <ImageButton
            android:id="@+id/disc_button"
            android:layout_width="match_parent"
            android:background="@null"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:src="@drawable/ic_baseline_delete_24"
            android:button="@android:color/transparent"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/disc_label" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:text="@string/save_record_label" />

    </LinearLayout>

</FrameLayout>
